--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,45 +1,36 @@
 <section id="projects">
 <div class="container">
-  <h3>Projects</h3>
+  <h3>Projects I am Involved With</h3>
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/reactorlabs/rir">RIR</a></strong>
+			- An speculative optimizing compiler for the R programming language.
 		</h5>
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 2</a></strong>
-			- An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire.
-			Te his neglegentur consectetuer.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/charig/trufflemate">TruffleMATE</a></strong>
+			- An smalltalk virtual machine with advanced reflective capabilities.
 		</h5>
-    	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 3</a></strong>
-			- An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
+    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/nopsys">NopSys</a></strong>
+			- A framework for building self-contained development environments, i.e., programming environments or 
+			applications that do not require an operating system layer. The repo also contains a self-contained Smalltalk.
 		</h5>
 		<h5>
+				<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/SOM-st">SOM</a></strong>
+				- Implementations of the Simple Object Machine.
+			</h5>
+		<!--<h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 4</a></strong>
 			- Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem,
 			ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
-		</h5>
-		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
-			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
-			eam doming blandit facilisis.
-		</h5>
-		<h5>
+		</h5>-->
+		<!--<h5>
 			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 6</a></strong>
 			- Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem,
 			usu ex sapientem gubergren. Tamquam admodum ei usu.
 		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 7</a></strong>
-			- Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum
-			tractatos partiendo at, debet ubique oporteat ut his.
-		</h5>
-
-
-    </div>
-  </div>
+	-->
+	</div>
 </div>
 </section>
