--- a/_includes/social.html
+++ b/_includes/social.html
@@ -16,5 +16,7 @@
     {% if site.stackoverflow %}
 	  <a href="http://stackoverflow.com/{{ site.stackoverflow }}"><i class="fa fa-stack-overflow"></i></a>
     {% endif %}
+    <a href="https://scholar.google.com/citations?hl=en&user=cNLCQdoAAAAJ&view_op=list_works&sortby=pubdate"><i class="fa fa-google"></i></a>
+    <a href="https://dblp.uni-trier.de/pers/hd/c/Chari:Guido"><i class="fa fa-user"></i></a>
 	</h4>
 </div>
