--- a/_includes/events.html
+++ b/_includes/events.html
@@ -13,6 +13,18 @@
 	<h3>Program Committee</h3>
 		<div class="panel-body">
 			<h5>
+				<a href="https://conf.researchr.org/home/dls-2019"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>DLS '19</span></strong>.
+			</h5>
+			<h5>
+				<a href="https://2019.splashcon.org/home/meta-2019"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>META '19</span></strong>
+				- Co-Organizer.
+			</h5>
+			<h5>
+				<a href="https://2019.splashcon.org/committee/splash-2019-artifacts-artifact-evaluation-committee"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>OOPSLA '19</span></strong>
+				- Arficact Evaluation Committee.
+			</h5>
+
+			<h5>
 				<a href="https://2018.splashcon.org/track/meta-2018"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>META '18</span></strong>
 				- Co-Organizer.
 			</h5>
