--- a/_includes/events.html
+++ b/_includes/events.html
@@ -4,6 +4,12 @@
 	<div class="panel panel-default">
 		<div class="panel-body">
 			<h5>
+				<a href="https://2019.splashcon.org/"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>SPLASH '19</span></strong>
+			</h5>
+			<h5>
+				<a href="https://esug.github.io/"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>ESUG '19</span></strong>
+			</h5>
+			<h5>
 				<a href="https://2018.splashcon.org/"><i class="fa fa-users"></a></i>&nbsp;&nbsp;<strong><span>SPLASH '18</span></strong>
 			</h5>
 			<h5>
