--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,6 +4,14 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
+			<a href="https://arxiv.org/abs/1907.05118"><i class="fa fa-file-pdf-o"></i></a>&nbsp;&nbsp;<a href=""><i class="fa fa-info-circle"></a></i>&nbsp;&nbsp;<strong><span>R Melts Brains</span></strong>
+			- Dynamic Languages Symposium (DLS), 2019.
+		</h5>
+		<h5>
+			<a href=""><i class="fa fa-file-pdf-o"></i></a>&nbsp;&nbsp;<a href=""><i class="fa fa-info-circle"></a></i>&nbsp;&nbsp;<strong><span>Powerlang: a Vehicle for Lively Implementing Programming Languages</span></strong>
+			- International Workshop on Smalltalk Technologies (IWST), 2019.
+		</h5>
+	        <h5>
 			<a href="assets/papers/SCDE-DLS.pdf"><i class="fa fa-file-pdf-o"></i></a>&nbsp;&nbsp;<a href=""><i class="fa fa-info-circle"></a></i>&nbsp;&nbsp;<strong><span>Self-Contained Development Environments</span></strong>
 			- Dynamic Languages Symposium (DLS), 2018.
 		</h5>
